# scipion-em-template

./: .gitignore  CHANGES.txt  MANIFEST.in  README.rst  pyproject.toml  setup.py
.github/workflows/: publish_and_tag.yml
data/: proj.stk  proj.xmd  virus.feat  virus.param
myplugin/: __init__.py  constants.py  protocols.conf  protocols.py  setup.py  wizards.py
myplugin/protocols/: __init__.py  protocol_empiar_download.py  protocol_hello_world.py  protocol_run_myprogram.py  protocol_statistics.py  protocol_steps_exec.py  protocol_thumbnail.py  protocol_volume_difference.py  protocol_volume_filter.py
myplugin/tests/: __init__.py  proj.stk  test_protocol_myCalculator.py  test_protocol_statistics.py  test_protocol_thumbnail.py
myplugin/viewers/: __init__.py  viewer_volume_difference.py  viewer_volume_filter.py
myplugin/wizards/: __init__.py  wizard_hello_world.py
smartscope/objects/: data.py
